Cart image flickering fix. Blue button mobile fix

--- a/src/app/shared/components/cart/cart.component.scss
+++ b/src/app/shared/components/cart/cart.component.scss
@@ -34,6 +34,7 @@
     border-bottom: 1px solid black;
     padding: 1.5rem 2rem;
     .close-btn {
+      color: black;
       font-size: 1.4rem;
     }
   }
