--- a/src/app/shared/components/quantity/quantity.component.scss
+++ b/src/app/shared/components/quantity/quantity.component.scss
@@ -11,6 +11,7 @@
     button {
       font-size: 1.5rem;
       position: absolute;
+      color: black;
     }
     &-subtract {
       left: 0;
